[project]
name = "training-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Slastenin",email = "denslastenin4739294@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standart] (>=0.135.2,<0.136.0)",
    "uvicorn[standart] (>=0.42.0,<0.43.0)",
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
